--- a/src/train_agents.ipynb
+++ b/src/train_agents.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "703dad0f",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
     "    test_agents(\n",
     "        agents=[f\"{layout}_selfplay\"],\n",
     "        layouts=layout,\n",
-    "        num_episodes=100\n",
+    "        verbose=True\n",
     "    )"
    ]
   },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "844fc5e6",
    "metadata": {},
    "outputs": [
@@ -1141,12 +1141,12 @@
     }
    ],
    "source": [
-    "test_agents(agents=[\"generalized_selfplay\"], layouts=LAYOUTS, num_episodes=100)"
+    "test_agents(agents=[\"generalized_selfplay\"], layouts=LAYOUTS, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3d2ac8a4",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
     }
    ],
    "source": [
-    "test_agents(agents=[\"generalized_selfplay\"], layouts='simple_o', num_episodes=100)"
+    "test_agents(agents=[\"generalized_selfplay\"], layouts='simple_o', verbose=True)"
    ]
   },
   {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b8928e6f",
    "metadata": {},
    "outputs": [
@@ -3551,18 +3551,18 @@
     "    test_agents(\n",
     "        agents=[f\"{layout}_random\"],\n",
     "        layouts=layout,\n",
-    "        num_episodes=100\n",
+    "        verbose=True,\n",
     "    )\n",
     "    for partner in ['random', 'idle']:\n",
     "        test_agents(\n",
     "            agents=[f\"{layout}_random\", partner],\n",
     "            layouts=layout,\n",
-    "            num_episodes=100\n",
+    "            verbose=True,\n",
     "        )\n",
     "        test_agents(\n",
     "            agents=[partner, f\"{layout}_random\"],\n",
     "            layouts=layout,\n",
-    "            num_episodes=100\n",
+    "            verbose=True,\n",
     "        )"
    ]
   },
@@ -3647,7 +3647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3d657dee",
    "metadata": {},
    "outputs": [
@@ -5231,18 +5231,18 @@
    "source": [
     "\n",
     "test_agents(\n",
-    "    agents=[\"generalized_random\"], layouts=LAYOUTS, num_episodes=100\n",
+    "    agents=[\"generalized_random\"], layouts=LAYOUTS, verbose=True\n",
     ")\n",
     "for partner in ['random', 'idle']:\n",
     "    test_agents(\n",
     "        agents=[\"generalized_random\", partner],\n",
     "        layouts=LAYOUTS,\n",
-    "        num_episodes=100\n",
+    "        verbose=True\n",
     "    )\n",
     "    test_agents(\n",
     "        agents=[partner, \"generalized_random\"],\n",
     "        layouts=LAYOUTS,\n",
-    "        num_episodes=100\n",
+    "        verbose=True\n",
     "    )"
    ]
   }
