added more examples + updated test arguments

--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "f871f100",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.10.17)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "from testing import test_agents, render_episodes"
    ]
@@ -201,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "2532298c",
    "metadata": {},
    "outputs": [],
@@ -271,6 +280,84 @@
     "        render_episodes(agents=[f\"{layout}_random\", 'idle'], layouts=[layout])\n",
     "    else:\n",
     "        render_episodes(agents=[\"idle\", f\"{layout}_random\"], layouts=[layout])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bcfcf59",
+   "metadata": {},
+   "source": [
+    "## Generalized Randomized Demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c0a92e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['generalized_random.pth', 'generalized_random.pth']\n",
+      "Testing layout: cramped_room\n",
+      "Testing layout: asymmetric_advantages\n",
+      "Testing layout: coordination_ring\n",
+      "Evaluation Results:\n",
+      "Layout: cramped_room - Average Reward: 176.8 , Standard Deviation: 17.37, Average Soup Count: 8.84\n",
+      "\n",
+      "Layout: asymmetric_advantages - Average Reward: 129.6 , Standard Deviation: 30.79, Average Soup Count: 6.48\n",
+      "\n",
+      "Layout: coordination_ring - Average Reward: 15.8 , Standard Deviation: 15.31, Average Soup Count: 0.79\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_agents(agents=[\"generalized_random\"], layouts=LAYOUTS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4bfd4958",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['generalized_random.pth', 'generalized_random.pth']\n",
+      "Rendering: Layout: cramped_room - Final Reward: 160 - Soup Count: 8\n",
+      "Rendering: Layout: asymmetric_advantages - Final Reward: 160 - Soup Count: 8\n",
+      "Rendering: Layout: coordination_ring - Final Reward: 20 - Soup Count: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "render_episodes(agents=[\"generalized_random\"], layouts=LAYOUTS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c4142340",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['random', 'generalized_random.pth']\n",
+      "Rendering: Layout: cramped_room - Final Reward: 80 - Soup Count: 4\n",
+      "Rendering: Layout: asymmetric_advantages - Final Reward: 0 - Soup Count: 0\n",
+      "Rendering: Layout: coordination_ring - Final Reward: 0 - Soup Count: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "render_episodes(agents=['random', \"generalized_random\"], layouts=LAYOUTS)"
    ]
   }
  ],
